===========================================================================
This file describes changes in the GAP package 'nq'.
===========================================================================

2.5.7 (2022-03-16)
  - Don't abort certain computations just because an "unknown"
    global option is on the GAP "Options Stack"

2.5.6 (2022-02-22)
  - Remove support for ABI override in configure script. This is
    rarely useful, and anybody who cares can simply add `-m32` or `-m64` to
    the CFLAGS
  - Minor change to support execution on Windows (under Cygwin)

2.5.5 (2021-04-11)
  - Various other janitorial updates

2.5.4 (2019-02-15)
  - Update build system for compatibility with GAP 4.9 and later
  - Various other janitorial updates

2.5.3 (2016-03-08)
  - Maintenance release

2.5.2 (2016-01-07)
  - Move website to https://gap-packages.github.io/nq/

2.5.1 (2014-04-02)
  * Fix linker error on Unix systems other than Mac OS X
  * Remove GAP function NqBuildManual (use the makedoc.g
    script instead)

2.5 (2014-04-01)
  * Renamed configure option "--with-gap-root" to "--with-gaproot"
    in order to match the io and orb packages more closely.
  * Changed build system to use automake
  * Changed how the manual is built (now AutoDoc is used to
	automatically generate the title page from PackageInfo.g)
  * Add GPL license file to make clear that nq is licensed under the GPL
    (after discussion with Werner Nickel and getting his explicit approval)
  * Moved the homepage to GitHub
  * Updated Max Horn's contact details

2.4 (2012-01-12)
  * Fixed crash on some systems caused by a long standing memory
    management bug.
  * Fixed crash on certain systems caused by exponents being sometimes
    treated as 64bit words, and sometimes as 32bit words.
  * Fixed spurious warnings when running "configure" that could occur
    when using --with-gmp-prefix
  * Fixed a warning when using nq in GAP versions before 4.5.
  * Improved build system: